syntax = "proto3";
// package name is used for both generated .sol file name and library name
package Packet;

import "google/protobuf/descriptor.proto";
extend google.protobuf.FieldOptions {
    string soltype = 8888;  // must > 1001 and not conflict with other extensions
}

message RandomHash {
    bytes user = 1 [ (soltype) = "address" ];
    bytes provider = 2 [ (soltype) = "address" ];
    bytes sessionID = 3 [ (soltype) = "bytes32" ];
    bytes rHash = 4 [ (soltype) = "bytes32" ];
}

message Transfer {
    bytes from = 1 [ (soltype) = "address" ];
    bytes to = 2 [ (soltype) = "address" ];
    bytes sessionID = 3 [ (soltype) = "bytes32" ];
    bytes channelID = 4 [ (soltype) = "bytes32" ];
    uint64 balance = 5 [ (soltype) = "uint256" ];
    uint64 nonce = 6 [ (soltype) = "uint256" ];
    bytes additionalHash = 7 [ (soltype) = "bytes32" ];
    bytes signature = 8 [ (soltype) = "bytes32" ];
}

message Random {
    bytes user = 1 [ (soltype) = "address" ];
    bytes provider = 2 [ (soltype) = "address" ];
    bytes sessionID = 3 [ (soltype) = "bytes32" ];
    bytes random = 4 [ (soltype) = "bytes32" ];
}